# rdaw

./: Cargo.toml  flake.nix  rustfmt.toml
crates/rdaw/: Cargo.toml
crates/rdaw-api/: Cargo.toml
crates/rdaw-api/src/: arrangement.rs  asset.rs  audio.rs  blob.rs  client.rs  document.rs  error.rs  lib.rs  media.rs  tempo_map.rs  tests.rs  time.rs  track.rs  transport.rs
crates/rdaw-api/src/item/: audio.rs  mod.rs
crates/rdaw-api/src/source/: audio.rs  mod.rs
crates/rdaw-audio/: Cargo.toml
crates/rdaw-audio/src/: driver.rs  graph.rs  lib.rs
crates/rdaw-backend/: Cargo.toml
crates/rdaw-backend/src/: blob.rs  dispatch.rs  hub.rs  lib.rs  storage.rs  subscribers.rs  tests.rs  track.rs
crates/rdaw-backend/src/arrangement/: encoding.rs  mod.rs  ops.rs
crates/rdaw-backend/src/asset/: encoding.rs  mod.rs  ops.rs  reader.rs  tests.rs
crates/rdaw-backend/src/blob/: cache.rs  mod.rs  ops.rs
crates/rdaw-backend/src/document/: blob.rs  compression.rs  database.rs  encoding.rs  metadata.rs  mod.rs  ops.rs  storage.rs  tests.rs
crates/rdaw-backend/src/item/: audio.rs  mod.rs
crates/rdaw-backend/src/object/: encoding.rs  hub.rs  mod.rs  storage.rs
crates/rdaw-backend/src/source/: audio.rs  mod.rs
crates/rdaw-backend/src/source/audio/: mod.rs  ops.rs
crates/rdaw-backend/src/tempo_map/: encoding.rs  mod.rs
crates/rdaw-backend/src/track/: encoding.rs  items.rs  mod.rs  ops.rs  tests.rs  view.rs
crates/rdaw-core/: Cargo.toml
crates/rdaw-core/src/: graph.rs  lib.rs  path.rs  time.rs
crates/rdaw-core/src/buffer/: audio.rs  mod.rs
crates/rdaw-core/src/collections/: mod.rs
crates/rdaw-core/src/sync/: ipc_ring.rs  ipc_spsc.rs  mod.rs  ring.rs  spsc.rs
crates/rdaw-core/src/sync/ipc_event/: mod.rs  unix.rs
crates/rdaw-core/src/sync/named_event/: linux.rs  mod.rs
crates/rdaw-core/src/sync/ring/: ipc.rs  local.rs  mod.rs
crates/rdaw-core/src/sync/shared_mem/: mod.rs  unix.rs
crates/rdaw-core/src/sync/spsc/: ipc.rs  local.rs  mod.rs
crates/rdaw-core/tests/: ipc.rs
crates/rdaw-example/: Cargo.toml
crates/rdaw-example/src/: main.rs
crates/rdaw-ffmpeg/: Cargo.toml
crates/rdaw-ffmpeg/src/: audio_input_stream.rs  decoder.rs  error.rs  frame.rs  input.rs  lib.rs  media.rs  media_input.rs  packet.rs  reader.rs  resample.rs
crates/rdaw-ffmpeg/src/internal/: decoder.rs  error.rs  frame.rs  input.rs  mod.rs  packet.rs  reader.rs  resample.rs
crates/rdaw-ffmpeg/tests/: decoding.rs
crates/rdaw-frontend/: Cargo.toml
crates/rdaw-frontend/src/: api.rs  lib.rs  track.rs
crates/rdaw-frontend/src/views/: arrangement.rs  mod.rs  track_arrangement.rs  track_control.rs  track_items.rs  track_tree.rs
crates/rdaw-graph/: Cargo.toml
crates/rdaw-graph/src/: lib.rs
crates/rdaw-macros/: Cargo.toml
crates/rdaw-macros/src/: lib.rs
crates/rdaw-object/: Cargo.toml
crates/rdaw-object/src/: arrangement.rs  beat_map.rs  blob.rs  lib.rs  storage.rs  tempo_map.rs  time.rs  track.rs
crates/rdaw-object/src/item/: audio.rs  mod.rs
crates/rdaw-object/src/source/: audio.rs  mod.rs
crates/rdaw-pipewire/: Cargo.toml
crates/rdaw-pipewire/src/: error.rs  internal.rs  lib.rs
crates/rdaw-rpc/: Cargo.toml
crates/rdaw-rpc/src/: client.rs  id_allocator.rs  lib.rs  subscribers.rs
crates/rdaw-rpc/src/transport/: local.rs  mod.rs
crates/rdaw-ui/: Cargo.toml
crates/rdaw-ui-kit/: Cargo.toml
crates/rdaw-ui-kit/src/: button.rs  lib.rs
crates/rdaw-ui/src/: lib.rs  task.rs  theme.rs
crates/rdaw-ui/src/views/: button.rs  mod.rs  tree.rs
crates/rdaw-ui/src/views/tree/: fs.rs  mod.rs  model.rs
crates/rdaw/src/: main.rs
