[workspace]
resolver = "2"

members = [
  "crates/*"
]

[workspace.dependencies]
rdaw-api = { path = "crates/rdaw-api", version = "0.1.0" }
rdaw-audio = { path = "crates/rdaw-audio", version = "0.1.0" }
rdaw-backend = { path = "crates/rdaw-backend", version = "0.1.0" }
rdaw-core = { path = "crates/rdaw-core", version = "0.1.0" }
rdaw-frontend = { path = "crates/rdaw-frontend", version = "0.1.0" }
rdaw-pipewire = { path = "crates/rdaw-pipewire", version = "0.1.0" }
rdaw-ui-kit = { path = "crates/rdaw-ui-kit", version = "0.1.0" }

ahash = "0.8.11"
async-channel = "2.3.1"
async-executor = "1.11.0"
audio_thread_priority = "0.32.0"
blake3 = "1.5.1"
bumpalo = "3.16.0"
crossbeam-queue = "0.3.11"
crossbeam-utils = "0.8.19"
floem = { git = "https://github.com/lapce/floem.git", rev = "c74beb142dd2611ff5a2f648e3bdb4b9437c9dc7" }
futures-lite = "2.3.0"
im = "15.1.0"
libc = "0.2.154"
loom = "0.7.2"
nix = { version = "0.28.0", features = ["fs", "mman"] }
oneshot = "0.1.6"
palette = { version = "0.7.6", default-features = false, features = ["std"] }
pipewire = "0.8.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rstar = "0.12.0"
slotmap = "1.0.7"
smallvec = "1.13.2"
thiserror = "1.0.59"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
trait-variant = "0.1.2"
uuid = { version = "1.8.0", features = ["v4"] }
