[package]
name = "rdaw-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rdaw-core.workspace = true
rdaw-macros.workspace = true

async-channel.workspace = true
crossbeam-queue.workspace = true
fixed.workspace = true
futures-lite.workspace = true
pin-project-lite.workspace = true
slotmap.workspace = true
thiserror.workspace = true
trait-variant.workspace = true
