[package]
name = "rdaw-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rdaw-core.workspace = true
rdaw-rpc.workspace = true

blake3.workspace = true
fixed.workspace = true
futures.workspace = true
serde.workspace = true
slotmap.workspace = true
thiserror.workspace = true
tracing-error.workspace = true
tracing.workspace = true
