[package]
name = "rdaw-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rdaw-api.workspace = true
rdaw-core.workspace = true
rdaw-rpc.workspace = true

async-channel.workspace = true
blake3.workspace = true
chrono.workspace = true
futures.workspace = true
postcard.workspace = true
rstar.workspace = true
rusqlite.workspace = true
serde.workspace = true
slotmap.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true 
