[package]
name = "rdaw-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash.workspace = true
crossbeam-queue.workspace = true
crossbeam-utils.workspace = true
dashmap.workspace = true
futures.workspace = true
im.workspace = true
libc.workspace = true
nix.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[target.'cfg(loom)'.dependencies]
loom.workspace = true

[[test]]
name = "ipc"
harness = false
